US1: removed redundant files;

--- a/google-chrome-page-title-regex-replacer/manifest.json
+++ b/google-chrome-page-title-regex-replacer/manifest.json
@@ -1,25 +1,17 @@
 {
-  "name": "Get pages source",
-  "version": "1.0",
+  "name": "Rally ID link",
+  "description": "https://github.com/canojim/hackathon",
+  "version": "1",
   "manifest_version": 2,
-  "description": "Get pages source from a popup",
-  "browser_action": {
-    "default_icon": "icon.png",
-    "default_popup": "popup.html"
-  },
-  "permissions": ["tabs", "<all_urls>"]
-}
-
-/*{
-  "name": "Title Regex Replacer",
-  "version": "1.0",
-  "manifest_version": 2,
-  "description": "Allows for site titles to be changed with regular expressions",
   "content_scripts": [
     {
-      "matches": ["https://www.google.com"],
-      "js": ["title_replace.js"],
-      "run_at": "document_end"
+      "matches": [
+        "https://github.paypal.com/*",
+        "https://github.com/*"
+      ],
+      "js": [
+        "rally.js"
+      ]
     }
   ]
-}*/
+}
